tests/ui/consts/const_in_pattern/incomplete-slice.stderr
error[E0004]: non-exhaustive patterns: `&[]` and `&[_, _, ..]` not covered
  --> $DIR/incomplete-slice.rs:9:11
   |
LL |     match &[][..] {
   |           ^^^^^^^ patterns `&[]` and `&[_, _, ..]` not covered
LL |
LL |         E_SL => {}
   |         ---- this pattern doesn't introduce a new catch-all binding, but rather pattern matches against the value of constant `E_SL`
   |
   = note: the matched value is of type `&[E]`
note: constant `E_SL` defined here
  --> $DIR/incomplete-slice.rs:6:1
   |
LL | const E_SL: &[E] = &[E::A];
   | ^^^^^^^^^^^^^^^^
help: if you meant to introduce a binding, use a different name
   |
LL |         E_SL_var => {}
   |             ++++
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         E_SL => {},
LL +         &[] | &[_, _, ..] => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
